k8s/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: argocd.abdimajidcloud.com

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - argocd.abdimajidcloud.com
      secretName: argocd-tls

  rules:
    - host: argocd.abdimajidcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
