k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: grafana.abdimajidcloud.com

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - grafana.abdimajidcloud.com
      secretName: grafana-tls

  rules:
    - host: grafana.abdimajidcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
