k8s/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: prometheus.abdimajidcloud.com

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - prometheus.abdimajidcloud.com
      secretName: prometheus-tls

  rules:
    - host: prometheus.abdimajidcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
